<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tadungit.crarymath.MainActivity" >

    <TextView
        android:id="@+id/tv_crazy_math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/crazy_math"
        android:textColor="@color/text"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/game"
        android:textColor="@color/text"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_best_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/best_score"
        android:textColor="@color/text"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_play"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="50dp"
        android:background="@drawable/shp_red"
        android:text="@string/play"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_more"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="10dp"
        android:background="@drawable/shp_green"
        android:text="@string/more"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>