<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backg"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@android:color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="2"
        android:text="@string/game_over"
        android:textColor="@color/light_red"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_your_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/your_score"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_try_again"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="70dp"
        android:background="@drawable/shp_red"
        android:text="@string/try_again"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_home"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/shp_green"
        android:text="@string/home"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>